<resources>
    <string name="llenguatge">ca</string>

    <!--Menu-->
    <string name="benvingut">Hola, benvingut a Recursos Digitals en Pneumologia!
        Clica la icona a continuació.</string>

    <!--Menu-->
    <string name="menuAcces">Accedir</string>
    <string name="menuLlenguatge">Llenguatge</string>

    <!--SubMenu-->
    <string name="login">Iniciar sessió</string>
    <string name="register">Registrar-se</string>
    <string name="logout">Tancar sessió</string>
    <string name="subMenuCatalan">Català</string>
    <string name="subMenuCastella">Castellà</string>
    <string name="subMenuAngles">Anglès</string>

    <!--Vista Inici-->
    <string name="app_name">RecursosDigitalsPneumologia</string>
    <string name="tlbiTitol">Inici</string>
    <string name="btnFormulari">Formulari</string>
    <string name="btnVideo">Vídeos</string>
    <string name="btnCalendari">Calendari</string>
    <string name="btnEditarRols">Editar Rols</string>
    <string name="btnAfegirVideo">Afegir Vídeo</string>
    <string name="btnEliminarVideo">Eliminar Vídeo</string>

    <!--Vista Acces-->
    <string name="btnAcces">Accedir</string>
    <string name="edtNom">Nom</string>
    <string name="edtCognoms">Cognoms</string>
    <string name="edtEmail">Usuari</string>
    <string name="edtContrasenya">Contrasenya</string>
    <string name="tlbaTitol">Inicia sessió</string>

    <!--Vista Formulari-->
    <string name="tlbfTitol">Formulari</string>

    <!--Vista Calendari-->
    <string name="tlbcTitol">Calendari</string>

    <!--Vista Llistat vídeos-->
    <string name="tlbvTitol">Vídeos</string>

    <!--Vista AfegirVideos-->
    <string name="tlbafTitol">Vídeo nuevo</string>

    <!--Vista EliminarVideos-->
    <string name="tlbevTitol">Esborrar vídeo</string>

    <!--Categoria-->
    <string name="cTots"></string>
    <string name="cMascareta">Mascareta</string>
    <string name="cMaquina">Màquina</string>

    <!--Descripció imatge portada-->
    <string name="content_description_hospital_sant_pau">Hospital de la Santa Creu i Sant Pau</string>
    <string name="content_rdp">Recursos Digitals Pneumologia</string>


</resources>
