<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/idAcces"
        android:title="@string/menuAcces"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/idLlenguatge"
        android:title="@string/menuLlenguatge"
        android:icon="@drawable/ic_language"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/idCatala"
                android:title="@string/subMenuCatalan"
                android:iconTint="@color/white"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/idCastella"
                android:title="@string/subMenuCastella"
                android:iconTint="@color/white"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/idAngles"
                android:title="@string/subMenuAngles"
                android:iconTint="@color/white"
                app:showAsAction="never"
                />
        </menu>

    </item>

</menu>