<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autentificacio.IniciarSessio">

    <include
        android:id="@+id/idToolBar"
        layout="@layout/toolbar"
        />

    <EditText
        android:id="@+id/idNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idToolBar"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="50dp"
        android:hint="@string/edtNom" />

    <EditText
        android:id="@+id/idCognoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idToolBar"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="175dp"
        android:layout_marginRight="50dp"
        android:hint="@string/edtCognoms" />

    <EditText
        android:id="@+id/idEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idToolBar"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="261dp"
        android:layout_marginRight="50dp"
        android:hint="@string/edtEmail" />

    <EditText
        android:id="@+id/idContrassenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idNom"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="216dp"
        android:layout_marginRight="50dp"
        android:hint="@string/edtContrasenya"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/idComprovacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idNom"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="303dp"
        android:layout_marginRight="50dp"
        android:hint="@string/edtContrasenya"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/idButtonAcces"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idContrassenya"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/buttons"
        android:text="@string/btnAcces"
        android:textColor="@color/white">

    </Button>

</RelativeLayout>