<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".MainActivity">

    <include
        android:id="@+id/idToolBar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imv_form"
        android:layout_width="104dp"
        android:layout_height="94dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:onClick="onClickBtnFormulari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_editrols"
        app:srcCompat="@drawable/button_form" />

    <TextView
        android:id="@+id/tv_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnCalendari"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_calendari"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imv_calendari"
        app:layout_constraintTop_toBottomOf="@+id/imv_calendari" />

    <TextView
        android:id="@+id/tv_editrol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnEditarRols"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_editrols"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imv_editrols"
        app:layout_constraintTop_toBottomOf="@+id/imv_editrols" />

    <TextView
        android:id="@+id/tv_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnFormulari"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_form"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imv_form"
        app:layout_constraintTop_toBottomOf="@+id/imv_form" />

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnVideo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_video"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imv_video"
        app:layout_constraintTop_toBottomOf="@+id/imv_video" />

    <TextView
        android:id="@+id/tv_addvideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnAfegirVideo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_addvideo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imv_addvideo"
        app:layout_constraintTop_toBottomOf="@+id/imv_addvideo" />

    <TextView
        android:id="@+id/tv_delvideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnEliminarVideo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#65473E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imv_delvideo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imv_delvideo"
        app:layout_constraintTop_toBottomOf="@+id/imv_delvideo" />

    <ImageView
        android:id="@+id/imv_editrols"
        android:layout_width="104dp"
        android:layout_height="94dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imv_form"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/imv_calendari"
        app:layout_constraintTop_toBottomOf="@+id/idToolBar"
        app:layout_constraintVertical_bias="0.254"
        app:srcCompat="@drawable/button_editrol" />

    <ImageView
        android:id="@+id/imv_addvideo"
        android:layout_width="104dp"
        android:layout_height="94dp"
        android:layout_marginTop="92dp"
        android:clickable="true"
        android:onClick="onClickBtnAfegirVideo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imv_delvideo"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/imv_video"
        app:layout_constraintTop_toBottomOf="@+id/imv_editrols"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/button_addvideos" />

    <ImageView
        android:id="@+id/imv_video"
        android:layout_width="105dp"
        android:layout_height="94dp"
        android:layout_marginStart="28dp"
        android:clickable="true"
        android:onClick="onClickBtnVideos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_addvideo"
        app:srcCompat="@drawable/button_videos" />

    <ImageView
        android:id="@+id/imv_delvideo"
        android:layout_width="97dp"
        android:layout_height="95dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:onClick="onClickBtnEliminarVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_addvideo"
        app:srcCompat="@drawable/button_delvideos" />

    <ImageView
        android:id="@+id/imv_calendari"
        android:layout_width="104dp"
        android:layout_height="94dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_calendar"
        android:clickable="true"
        android:onClick="onClickBtnCalendari"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_editrols" />

</androidx.constraintlayout.widget.ConstraintLayout>